2023-01-14 - version 1.4.9
 - add GitHub Actions CI (Windows 32-bit, Windows 64-bit, Ubuntu Linux, macOS)
 - don't include bits/local_lim.h on macOS

2023-01-14 - version 1.4.8
 - fixes issues in ADReportUsers.cpp: can't return false in main()

2021-01-20 - version 1.4.7
 - fixes for OpenLDAP compatibility
 - fixes for handling int64_t types

2020-03-05 - version 1.4.6
 - added -n option to ADReportGroups to show number of members and enables members

2020-01-22 - version 1.4.5
 - added -s option to use TLS ecncryption on the LDAP connection
 - changed ADReportGroups parameter to list security groups only from -s to -g

2018-03-15 - version 1.4.4
 - changes to build with XLSX I/O v0.2.12 which uses minizip instead of libzip

2017-11-27 - version 1.4.3
 - minor changes to Makefile (Windows binary packages now support .xlsx file output)

2017-11-14 - version 1.4.2
 - added CheckUserFolders (to get home folder information from a directory)
 - added adreports_version.h and version information in command line help
 - changed parameters to use - instead of / in the help (both are still supported)
 - minor changes to Makefile

2017-11-14 - version 1.4.1
 - added Makefile

2017-11-07 - version 1.4
 - ported to Linux using OpenLDAP

2017-04-26 - version 1.3
 - added Description column to ADReportUsers/ADReportGroups/ADReportComputers

2016-08-18 - version 1.2
 - added MailboxCreated/MailboxSoftDeleted/ExchangeHomeServer/ExchangeArchiveDatabase fields to ADReportUsers

2016-07-03 - version 1.1
 - added VoiceEnabled/VoiceAddress/VoiceURI/VoiceExtension/VoiceOptionFlags fields to ADReportUsers

2016-06-20 - version 1.0
 - added support for .xlsx output format (using XLSX I/O library)
 - added Manager field to ADReportUsers

2013-05-31 - version 0.9
 - added ADGetPhoto to get JPEG picture of users

2013-02-05 - version 0.8
 - support paged results (needed for large queries)

2013-01-29 - version 0.7
 - support table name to be used as HTML title / Excel XML worksheet name
